--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html lang="en"> 
 <head>
-	<title>Luis Alva Resume Page</title>
+	<title>Luis Alva Page</title>
 	
 	<!-- Meta -->
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="description" content="Profolio Bootstrap 5 Template">
-	<meta name="author" content="Xiaoying Riley at 3rd Wave Media">    
+	<meta name="author" content="Luis Alva">    
 	<link rel="shortcut icon" href="favicon.ico"> 
 	
 	<!-- Google Fonts -->	
@@ -36,7 +36,7 @@
 					<div class="top-bar text-center position-relative">
 						<div class="top-bar-inner">
 							
-							<a class="btn btn-primary top-bar-cta" href="https://themes.3rdwavemedia.com/bootstrap-templates/resume/risen-free-bootstrap-5-dark-mode-resume-cv-template-for-developers/">Hire Me</a>
+							<a class="btn btn-primary top-bar-cta" href="">Hire Me</a>
 					
 							<ul class="social-list list-inline mx-auto">
 								<li class="list-inline-item me-0 me-md-1 me-lg-2"><a href="http://x.com/luisalva1526633"><i class="fa-brands fa-x-twitter fa-fw"></i></a></li>
@@ -61,7 +61,7 @@
 								<div class="resume-role-title text-uppercase">Emergency Dispatch Operator</div>
 								<div class="resume-contact mt-4">
 									<ul class="resume-contact-list list-unstyled list-inline mb-0 justify-content-between">
-										<li class="list-inline-item me-md-3 me-lg-5"><i class="resume-contact-icon bi bi-telephone-inbound me-2"></i> +1904-3232898</li>
+										<li class="list-inline-item me-md-3 me-lg-5"><i class="resume-contact-icon bi bi-telephone-inbound me-2"></i> +1904-323-2898</li>
 										<li class="list-inline-item me-md-3 me-lg-5"><i class="resume-contact-icon bi bi-envelope me-2"></i> luis@luisalva.me</li>
 										<li class="list-inline-item me-lg-5"><i class="resume-contact-icon bi bi-globe me-2"></i> www.luisalva.me</li>
 									</ul>
@@ -326,7 +326,9 @@ customer experience and maintaining internal efficiency. Drive customer educatio
 	
 	<footer class="footer text-center py-4">
 		<!--/* This template is free as long as you keep the footer attribution link. If you'd like to use the template without the attribution link, you can buy the commercial license via our website: themes.3rdwavemedia.com Thank you for your support. :) */-->
-		<small class="copyright">Designed with <span class="sr-only">love</span><i class="bi bi-heart-fill" style="color:#fe655c"></i> by <a class="theme-link" href="http://themes.3rdwavemedia.com" target="_blank">Xiaoying Riley</a> for developers</small>
+		<small class="copyright">Designed with <span class="sr-only">love</span><i class="bi bi-heart-fill" style="color:#fe655c"></i> by <a target="luisalva.me">Luis Alva</a>
+			
+		</small>
 	</footer>
 
 </body>
